[tool.poetry]
name = "hamux"
version = "0.2.0"
description = "HAMUX: a Hierarchical Associative Memory User eXperience. A deep learning framework built around energy."
authors = ["Ben Hoover <benhoover34@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.23"
equinox = "^0.11.2"
jaxtyping = "^0.2.24"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
nbdev = "^2.3.13"
jaxlib = "^0.4.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
